<resources>
    <string name="app_name">Hometoke</string>
    <string name="title_activity_ifcheck_view">IFcheckView</string>
    <string name="title_activity_item_bottom_navigation">item_bottom_navigation</string>
    <string name="title_serve">ホメる</string>
    <string name="title_receive">ホメられた</string>
    <string name="flat_text">の称号が与えられました。</string>
    <string name="stamp_flattext2">あなたは</string>
    <string name="stamp_flat_text3">に選ばれました</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_ndserve">ホメる</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_receive">ホメられた</string>
    <string name="menu_serve">ホメる</string>
    <string name="title_activity_ndreceive">ホメられた</string>

    <string name="elementary_school">小学校</string>
    <string name="junior_highschool">中学校</string>
    <string name="high_school">高等学校</string>
    <string name="hint_elementary_sch">港区立ホメトケ小学校</string>
    <string name="hint_junior_highsch">港区立ホメトケ中学校</string>
    <string name="hint_highsch">東京都立ホメトケ高等学校</string>
    <string name="nextBtn">次へ</string>
    <string name="setImageBtn">プロフィール画像を設定する</string>

    <string name="privacyPolicyText">Team-TOKE（以下、「TOKE」といいます。）は，本ウェブサイト上で提供するサービス（以下,「本サービス」といいます。）におけるプライバシー情報の取扱いについて，以下のとおりプライバシーポリシー（以下，「本ポリシー」といいます。）を定めます。
        \n\n第1条（プライバシー情報）
        \nプライバシー情報のうち「個人情報」とは，個人情報保護法にいう「個人情報」を指すものとし，生存する個人に関する情報であって，当該情報に含まれる氏名，生年月日，住所，電話番号，連絡先、在籍学校名、その他の記述等により特定の個人を識別できる情報を指します。
        \nプライバシー情報のうち「履歴情報および特性情報」とは，上記に定める「個人情報」以外のものをいい，ご利用いただいたサービスやご購入いただいた商品，ご覧になったページや広告の履歴，ユーザーが検索された検索キーワード，ご利用日時，ご利用の方法，ご利用環境，郵便番号や性別，職業，年齢，ユーザーのIPアドレス，クッキー情報，位置情報，端末の個体識別情報などを指します。
        \n個人情報には、集計されたまたは匿名化されたために、TOKEが合理的に利用できる方法を用いてユーザーをもはや特定できないデータは含まれません。
        \n\n第２条（プライバシー情報の収集方法）
        \nTOKEは，ユーザーが利用登録をする際に氏名，生年月日，電話番号，メールアドレス，在籍（在籍していた）小学校、在籍（在籍していた）中学校、在籍（在籍していた）高等学校、アプリ利用日時、LINEアカウントなどの個人情報をお尋ねすることがあります。また、ユーザーと提携先との間でなされたユーザーの個人情報を含む取引記録や，決済に関する情報をTOKEの提携先（情報提供元，広告主，広告配信先などを含みます。以下，｢提携先｣といいます。）などから収集することがあります。
        \nTOKEは，ユーザーについて，利用したサービスやソフトウエア，購入した商品，閲覧したページや広告の履歴，検索した検索キーワード，利用日時，利用方法，利用環境（携帯端末を通じてご利用の場合の当該端末の通信状態，利用に際しての各種設定情報なども含みます），IPアドレス，クッキー情報，位置情報，端末の個体識別情報などの履歴情報および特性情報を，ユーザーがTOKEや提携先のサービスを利用しまたはページを閲覧する際に収集します。
        \n\n第３条（個人情報を収集・利用する目的）
        \nTOKEが個人情報を収集・利用する目的は，以下のとおりです。
        \n（1）ユーザーに自分の登録情報の閲覧や修正，利用状況の閲覧を行っていただくために，氏名，生年月日，電話番号，メールアドレス，在籍（在籍していた）小学校、在籍（在籍していた）中学校、在籍（在籍していた）高等学校、アプリ利用日時、LINEアカウントなどの登録情報を表示する目的
        \n（2）ユーザーにお知らせや連絡をするためにメールアドレスを利用する場合、必要に応じて連絡したりするため，氏名の連絡先情報を利用する目的
        \n（3）ユーザーの本人確認を行うために，氏名，生年月日、電話番号などの情報を利用する目的
        \n（4）ユーザーが簡便にデータを入力できるようにするために，TOKEに登録されている情報を入力画面に表示させたり，ユーザーのご指示に基づいて他のサービスなど（提携先が提供するものも含みます）に転送したりする目的
        \n（5）ユーザーからのお問い合わせに対応するために，お問い合わせ内容等ユーザーに対してサービスを提供するにあたって必要となる情報や，ユーザーのサービス利用状況，連絡先情報などを利用する目的
        \n（6）上記の利用目的に付随する目的
        \n\n第4条（個人情報の第三者提供）
        \nTOKEは，次に掲げる場合を除いて，あらかじめユーザーの同意を得ることなく，第三者に個人情報を提供することはありません。ただし，個人情報保護法その他の法令で認められる場合を除きます。
        \n（1）法令に基づく場合
        \n（2）人の生命，身体または財産の保護のために必要がある場合であって，本人の同意を得ることが困難であるとき
        \n（3）公衆衛生の向上または児童の健全な育成の推進のために特に必要がある場合であって，本人の同意を得ることが困難であるとき
        \n（4）国の機関もしくは地方公共団体またはその委託を受けた者が法令の定める事務を遂行することに対して協力する必要がある場合であって，本人の同意を得ることにより当該事務の遂行に支障を及ぼすおそれがあるとき
        \n（5）予め次の事項を告知あるいは公表をしている場合
        \n利用目的に第三者への提供を含むこと
        \n第三者に提供されるデータの項目
        \n第三者への提供の手段または方法
        \n本人の求めに応じて個人情報の第三者への提供を停止すること
        \n前項の定めにかかわらず，次に掲げる場合は第三者には該当しないものとします。
        \n（1）TOKEが利用目的の達成に必要な範囲内において個人情報の取扱いの全部または一部を委託する場合
        \n（2）合併その他の事由による事業の承継に伴って個人情報が提供される場合
        \n（3）個人情報を特定の者との間で共同して利用する場合であって，その旨並びに共同して利用される個人情報の項目，共同して利用する者の範囲，利用する者の利用目的および当該個人情報の管理について責任を有する者の氏名または名称について，あらかじめ本人に通知し，または本人が容易に知り得る状態に置いているとき
        \n\n第5条（匿名加工情報の作成・取扱・第三者提供）
        \n匿名加工情報とは「①特定の個人を識別することができないように個人情報を加工して得られる個人に関する情報であって、②もとの個人情報を復元できないようにしたもの」を言います（個人情報保護法第2条9項）
        \nTOKEはユーザーが本サービスを利用する際に、匿名化情報および集計情報を収集または生成します。TOKEは、様々な方法で（本サービスに対するユーザーの関心および本サービスの一部または特徴の利用状況を測定することを含みます）、匿名化情報および集計情報を使用します。また、匿名化した情報を第三者へ提供することがあります。ただし、匿名化情報または集計情報は、個人情報ではありません。
        \n\n第6条（個人情報の開示）
        \nTOKEは，本人から個人情報の開示を求められたときは，本人に対し，遅滞なくこれを開示します。ただし，開示することにより次のいずれかに該当する場合は，その全部または一部を開示しないこともあり，開示しない決定をした場合には，その旨を遅滞なく通知します。
        \n（1）本人または第三者の生命，身体，財産その他の権利利益を害するおそれがある場合
        \n（2）TOKEの業務の適正な実施に著しい支障を及ぼすおそれがある場合
        \n（3）その他法令に違反することとなる場合
        \n前項の定めにかかわらず，履歴情報および特性情報などの個人情報以外の情報については，原則として開示いたしません。
        \n\n第7条（個人情報の訂正および削除）
        \nユーザーは，TOKEの保有する自己の個人情報が誤った情報である場合には，我々が定める手続きにより，我々に対して個人情報の訂正または削除を請求することができます。
        \nTOKEは，ユーザーから前項の請求を受けてその請求に応じる必要があると判断した場合には，遅滞なく，当該個人情報の訂正または削除を行い，これをユーザーに通知します。
        \n\n第8条（個人情報の利用停止等）
        \nTOKEは，本人から，個人情報が，利用目的の範囲を超えて取り扱われているという理由，または不正の手段により取得されたものであるという理由により，その利用の停止または消去（以下，「利用停止等」といいます。）を求められた場合には，遅滞なく 必要な調査を行い，その結果に基づき，個人情報の利用停止等を行い，その旨本人に通知します。ただし，個人情報の利用停止等に多額の費用を有する場合その他利用停止等を行うことが困難な場合であって，本人の権利利益を保護するために必要なこれに代わるべき措置をとれる場合は，この代替策を講じます。
        \n\n第9条（個人情報の流出について）
        \n本アプリはアプリ利用において登録されたプライバシー情報、利用情報は富士通クラウドテクノロジーズが提供するニフクラのデータサーバー（以下、ニフクラといいます。）へと保存されます。つきましてはプライバシー情報がニフクラへの不正アクセスやあらゆるサイバー攻撃によって流出した場合はTOKEは一切の責任を負いません。アプリ内に保存されている情報については携帯端末等の紛失、不正利用、ハッキングによって個人情報が流出した場合もTOKEは一切の責任を負いません。
        \n\n第10条（プライバシーポリシーの変更）
        \n本ポリシーの内容は，ユーザーに通知することなく，変更することができるものとします。
        \nTOKEが別途定める場合を除いて，変更後のプライバシーポリシーは，本サービスに掲載したときから効力を生じるものとします。
        \n\n第11条（お問い合わせ窓口）
        \n本ポリシーに関するお問い合わせは，下記の窓口までお願いいたします。
        \n\nEメールアドレス： toke.info@toke-inc.com
        \n\n\n以上\n\n</string>
</resources>
