<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ResisterSchoolsActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
                android:src="@drawable/school_info"
                android:layout_width="361dp"
                android:layout_height="77dp"
                android:id="@+id/imageView2"
                android:layout_gravity="center" android:layout_marginTop="10dp" android:layout_marginBottom="15dp"/>
        <TextView
            android:text="@string/elementary_school"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_elementary"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text=""
                android:hint="@string/hint_elementary_sch"
                android:ems="10"
                android:id="@+id/elementary_sch"
                android:focusable="false"
                android:layout_marginBottom="30dp"/>
        <TextView
                android:text="@string/junior_highschool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_junior"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text=""
                android:hint="@string/hint_junior_highsch"
                android:ems="10"
                android:id="@+id/junior_highsch"
                android:focusable="false"
                android:layout_marginBottom="30dp"/>
        <TextView
                android:text="@string/high_school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text=""
                android:hint="@string/hint_highsch"
                android:ems="10"
                android:id="@+id/highsch"
                android:focusable="false"
        />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>