<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/view" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintHeight_percent="0.8"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="visible"
            android:background="@drawable/layout_design"
    />
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stamp_title" android:textSize="30sp"
            android:textAlignment="center" android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/view" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/view" app:layout_constraintTop_toBottomOf="@+id/stamp_flat_text3"
            android:layout_marginTop="24dp" android:textColor="#726235"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/kitte"
            android:id="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/view" android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="@+id/view" android:layout_marginRight="30dp"
            app:layout_constraintWidth_percent="0.3"
            android:layout_marginEnd="30dp" app:layout_constraintDimensionRatio="1:1"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.19"
            app:srcCompat="@drawable/rukawa"
            android:id="@+id/stamp_image"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5" android:layout_marginBottom="11dp"
            app:layout_constraintDimensionRatio="1:1.1"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stamp_user_name" android:textSize="25sp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@+id/view"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
    />
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stamp_question" android:textSize="20sp"
            android:autoText="false" android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/stamp_flat_text2"/>
    <TextView
            android:text="@string/flat_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stamp_flat_text" android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/stamp_title" android:layout_marginTop="50dp"
            app:layout_constraintStart_toEndOf="@+id/view" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/view"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stamp_server" android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            android:layout_marginBottom="30dp" app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/view"/>
    <TextView
            android:text="@string/stamp_flattext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stamp_flat_text2"
            android:textSize="20sp" android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/view"
            android:layout_marginTop="50dp"/>
    <TextView
            android:text="@string/stamp_flat_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stamp_flat_text3"
            android:textAlignment="center" android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/stamp_question"/>
</android.support.constraint.ConstraintLayout>